--- a/dz9/index.html
+++ b/dz9/index.html
@@ -17,10 +17,10 @@
             <div id="taskList" class="task-list u-full-width">
                 <div class="task-item u-full-width">
                     {{title}}
-                    <span class="delete-btn">✘</span>
+                    <!-- <span class="delete-btn">✘</span> -->
                 </div>
             </div>
-            <form id="addTaskForm">
+            <!-- <form id="addTaskForm"> -->
                 <div class="row">
                     <div class="ten columns">
                         <input
@@ -34,13 +34,7 @@
                         <button type="submit" id="addBtn" class="u-full-width">Add</button>
                     </div>
                 </div>
-            </form>
-            <script type="text/template" id="taskItemTemplate">
-                <div class="task-item u-full-width">
-                    {{title}} - {{author}}
-                    <span class="delete-btn">✘</span>
-                </div>
-            </script>
+            <!-- </form> -->
         </div>
     </body>
 </html>
