--- a/lection/index.html
+++ b/lection/index.html
@@ -12,56 +12,5 @@
         <script src="../common/js/utils.js" defer></script>
         <script src="./app.js" defer></script>
     </head>
-    <body>
-        <form id="newContactForm" class="form">
-            <table class="u-full-width">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Surname</th>
-                        <th>Phone</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="contactsList"></tbody>
-                <tfoot>
-                    <tr>
-                        <td>
-                            <input
-                                type="text"
-                                name="name"
-                                id="nameInput"
-                                class="form-input"
-                            />
-                        </td>
-                        <td>
-                            <input
-                                type="text"
-                                name="surname"
-                                id="surnameInput"
-                                class="form-input"
-                            />
-                        </td>
-                        <td>
-                            <input
-                                type="text"
-                                name="phone"
-                                id="phoneInput"
-                                class="form-input"
-                            />
-                        </td>
-                        <td><input type="submit" id="addContactBtn" value="Add Contact"></td>
-                    </tr>
-                </tfoot>
-            </table>
-        </form>
-        <script type="text/template" id="contactTemplate">
-            <tr class="contact-row" data-contact-id="{{id}}">
-                <td>{{name}}</td>
-                <td>{{surname}}</td>
-                <td>{{phone}}</td>
-                <td><button type="button" class="delete-btn">Delete</button></td>
-            </tr>
-        </script>
-    </body>
+    <body></body>
 </html>
