--- a/lection/index.html
+++ b/lection/index.html
@@ -8,14 +8,14 @@
         <link rel="stylesheet" href="../common/css/skeleton.css" />
         <link rel="stylesheet" href="../common/css/dark-theme.css" />
         <link rel="stylesheet" href="./styles.css" />
-        <script src="./messages.js" async></script>
-        <script src="./scripts.js" async></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+        <script src="./messages.js"></script>
+        <script src="./scripts.js"></script>
         <title>Todo list</title>
     </head>
     <body>
         <div class="container">
-            <div id="taskList" class="task-list u-full-width">
-            </div>
+            <div id="taskList" class="task-list u-full-width"></div>
             <form id="addTaskForm">
                 <div class="row">
                     <div class="ten columns">
@@ -28,7 +28,9 @@
                         <span id="errorContainer" class="error hidden"></span>
                     </div>
                     <div class="two columns">
-                        <button type="submit" id="addBtn" class="u-full-width">Add</button>
+                        <button type="submit" id="addBtn" class="u-full-width">
+                            Add
+                        </button>
                     </div>
                 </div>
             </form>
