--- a/mvc/index.html
+++ b/mvc/index.html
@@ -14,7 +14,9 @@
         ></script>
         <script src="./controller/TodosController.js" defer></script>
         <script src="./model/TodosCollection.js" defer></script>
+        <script src="./view/TodosView.js" defer></script>
         <script src="./view/TodosListView.js" defer></script>
+        <script src="./view/TodoFormView.js" defer></script>
         <script src="./app.js" defer></script>
         <title>Todo list</title>
     </head>
