--- a/lection/index.html
+++ b/lection/index.html
@@ -10,36 +10,11 @@
         <link rel="stylesheet" href="./styles.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
         <script src="./messages.js"></script>
-        <script src="./scripts.js"></script>
+        <script src="./scripts.js" defer></script>
         <title>Todo list</title>
     </head>
     <body>
-        <div class="container">
-            <div id="taskList" class="task-list u-full-width"></div>
-            <form id="addTaskForm">
-                <div class="row">
-                    <div class="ten columns">
-                        <input
-                            type="text"
-                            name="title"
-                            id="taskNameInput"
-                            class="u-full-width"
-                        />
-                        <span id="errorContainer" class="error hidden"></span>
-                    </div>
-                    <div class="two columns">
-                        <button type="submit" id="addBtn" class="u-full-width">
-                            Add
-                        </button>
-                    </div>
-                </div>
-            </form>
-            <script type="text/template" id="taskItemTemplate">
-                <div class="task-item u-full-width {{doneClass}}" data-id="{{id}}">
-                    {{title}}
-                    <span class="delete-btn">✘</span>
-                </div>
-            </script>
-        </div>
+        <input type="text" id="name" />
+        <button id="sendBtn">Send Message</button>
     </body>
 </html>
